--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<header class="top-header">
 		<nav class="navbar header-nav navbar-expand-lg">
             <div class="container">
-				<a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="image"></a>
+				<a class="navbar-brand" href="index.html"><img src="images/apple-touch-icon.png" alt="image"></a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
 					<span></span>
 					<span></span>
@@ -60,30 +60,11 @@
 	</header>
 	<!-- End header -->
 	
-	<!-- Start Banner -->
-	<div class="ulockd-home-slider">
-		<div class="container-fluid">
-			<div class="row">
-				<div class="pogoSlider" id="js-main-slider">
-					<div class="pogoSlider-slide" style="background-image:url(images/slider-01.jpg);"></div>
-					<div class="pogoSlider-slide" style="background-image:url(images/slider-01.jpg);"></div>
-				</div><!-- .pogoSlider -->
-			</div>
-		</div>
-	</div>
-	<!-- End Banner -->
-	
 	<!-- wish -->
 	<div id="wish" class="about-box" style="padding-bottom: 0;">
 		<div class="about-a1">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="title-box">
-							<h2>Best Wishes</h2>
-						</div>
-					</div>
-				</div>
+				<div class="row" style="margin-top: 50px;"></div>
 				<div class="row">
 					<div class="col-lg-12 col-md-12 col-sm-12">
 						<div class="row align-items-center about-main-info">
