--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							</div>
 
                               <div class="col-lg-6 col-md-6 col-sm-12">
-								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" /> Harry Mike Wishes</h2>
+								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" />Merry Christmas!</h2>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown..</p>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
 								<a href="#" class="hvr-radial-out button-theme">Read More</a>
@@ -94,7 +94,7 @@
 						<div class="row align-items-center about-main-info">
 						
                             <div class="col-lg-6 col-md-6 col-sm-12">
-								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" /> Jonh Max Wishes</h2>
+								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" />Merry Christmas!</h2>
 								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown..</p>
 								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
 								<a href="#" class="hvr-radial-out button-theme">Read More</a>
