--- a/index.html
+++ b/index.html
@@ -1,136 +1,173 @@
 <!DOCTYPE html>
-<html lang="en"><!-- Basic -->
-<head>
-	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">   
-   
+<html lang="en">
+  <!-- Basic -->
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+
     <!-- Mobile Metas -->
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
- 
-     <!-- Site Metas -->
-    <title>Christmas - Responsive HTML5 Template</title>  
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+
+    <!-- Site Metas -->
+    <title>Christmas - Responsive HTML5 Template</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
 
     <!-- Site Icons -->
     <link rel="shortcut icon" href="#" type="image/x-icon" />
     <link rel="apple-touch-icon" href="#" />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- Pogo Slider CSS -->
-    <link rel="stylesheet" href="css/pogo-slider.min.css">
-	<!-- Site CSS -->
-    <link rel="stylesheet" href="css/style.css">    
+    <link rel="stylesheet" href="css/pogo-slider.min.css" />
+    <!-- Site CSS -->
+    <link rel="stylesheet" href="css/style.css" />
     <!-- Responsive CSS -->
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/responsive.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="css/custom.css" />
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
-</head>
-<body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
-
-	<!-- LOADER -->
+  </head>
+  <body id="home" data-spy="scroll" data-target="#navbar-wd" data-offset="98">
+    <!-- LOADER -->
     <div id="preloader">
-		<div class="loader">
-			<div class="box"></div>
-			<div class="box"></div>
-		</div>
-    </div><!-- end loader -->
+      <div class="loader">
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
+    <!-- end loader -->
     <!-- END LOADER -->
-	
-	<!-- Start header -->
-	<header class="top-header">
-		<nav class="navbar header-nav navbar-expand-lg">
-            <div class="container">
-				<a class="navbar-brand" href="index.html"><img src="images/apple-touch-icon.png" alt="image"></a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-wd" aria-controls="navbar-wd" aria-expanded="false" aria-label="Toggle navigation">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
+
+    <!-- Start header -->
+    <header class="top-header">
+      <nav class="navbar header-nav navbar-expand-lg">
+        <div class="container">
+          <a class="navbar-brand" href="index.html"
+            ><img src="images/apple-touch-icon.png" alt="image"
+          /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbar-wd"
+            aria-controls="navbar-wd"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+        </div>
+      </nav>
+    </header>
+    <!-- End header -->
+
+    <!-- wish -->
+    <div id="wish" class="about-box" style="padding-bottom: 0">
+      <div class="about-a1">
+        <div class="container">
+          <div class="row" style="margin-top: 50px"></div>
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="row align-items-center about-main-info">
+                <div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
+                  <div class="full">
+                    <img class="img-responsive" src="images/w1.png" alt="#" />
+                  </div>
+                </div>
+
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <h2>
+                    <img
+                      style="width: 60px"
+                      src="images/head_s.png"
+                      alt="#"
+                    />Merry Christmas!
+                  </h2>
+                  <p>
+                    I had to go on the internet now. I need to keep up. With you
+                    kids Ho-Ho-Ho! WELL, I had to use the washing machine to put
+                    one of the elves’ shirt to wash but forgot to put it to dry
+                    can you guys do that for me, Thanks. I hope you had fun and
+                    take care of this gift and thank your parents! Merry
+                    Christmas and Happy Holidays to you all! <br /><br />
+                    -Santa Claus
+                  </p>
+                </div>
+              </div>
             </div>
-        </nav>
-	</header>
-	<!-- End header -->
-	
-	<!-- wish -->
-	<div id="wish" class="about-box" style="padding-bottom: 0;">
-		<div class="about-a1">
-			<div class="container">
-				<div class="row" style="margin-top: 50px;"></div>
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<div class="row align-items-center about-main-info">
-							
-							<div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
-						      <div class="full">
-						      	  <img class="img-responsive" src="images/w1.png" alt="#" />
-						      </div>
-							</div>
+          </div>
+        </div>
+      </div>
+      <div
+        class="about-a1"
+        style="
+          background: #f7f7f7;
+          margin-top: 50px;
+          padding-top: 75px;
+          padding-bottom: 50px;
+        "
+      >
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+              <div class="row align-items-center about-main-info">
+                <div class="col-lg-6 col-md-6 col-sm-12">
+                  <h2>
+                    <img
+                      style="width: 60px"
+                      src="images/head_s.png"
+                      alt="#"
+                    />Merry Christmas!
+                  </h2>
+                  <p>
+                    I had to go on the internet now. I need to keep up. With you
+                    kids Ho-Ho-Ho! WELL, I had to use the washing machine to put
+                    one of the elves’ shirt to wash but forgot to put it to dry
+                    can you guys do that for me, Thanks. I hope you had fun and
+                    take care of this gift and thank your parents! Merry
+                    Christmas and Happy Holidays to you all! <br /><br />
+                    -Santa Claus
+                  </p>
+                </div>
 
-                              <div class="col-lg-6 col-md-6 col-sm-12">
-								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" />Merry Christmas!</h2>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown..</p>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
-								<a href="#" class="hvr-radial-out button-theme">Read More</a>
-							</div>
+                <div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
+                  <div class="full">
+                    <img class="img-responsive" src="images/w2.png" alt="#" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- wish us -->
 
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> 
-		<div class="about-a1" style="background:#f7f7f7;margin-top: 50px;padding-top: 75px;padding-bottom: 50px;">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 col-md-12 col-sm-12">
-						<div class="row align-items-center about-main-info">
-						
-                            <div class="col-lg-6 col-md-6 col-sm-12">
-								<h2><img style="width: 60px;" src="images/head_s.png" alt="#" />Merry Christmas!</h2>
-								<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the when an unknown..</p>
-								<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi.</p>
-								<a href="#" class="hvr-radial-out button-theme">Read More</a>
-							</div>
-
-							<div class="col-lg-6 col-md-6 col-sm-12 text_align_center">
-						      <div class="full">
-						      	  <img class="img-responsive" src="images/w2.png" alt="#" />
-						      </div>
-							</div>
-
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- wish us -->
-	
-	
-	
-		
-
-	<!-- ALL JS FILES -->
-	<script src="js/jquery.min.js"></script>
-	<script src="js/popper.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+    <!-- ALL JS FILES -->
+    <script src="js/jquery.min.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- ALL PLUGINS -->
-	<script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.pogo-slider.min.js"></script> 
-	<script src="js/slider-index.js"></script>
-	<script src="js/smoothscroll.js"></script>
-	<script src="js/form-validator.min.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.pogo-slider.min.js"></script>
+    <script src="js/slider-index.js"></script>
+    <script src="js/smoothscroll.js"></script>
+    <script src="js/form-validator.min.js"></script>
     <script src="js/contact-form-script.js"></script>
-	<script src="js/isotope.min.js"></script>	
-	<script src="js/images-loded.min.js"></script>	
+    <script src="js/isotope.min.js"></script>
+    <script src="js/images-loded.min.js"></script>
     <script src="js/custom.js"></script>
-</body>
+  </body>
 </html>
