--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <!-- Site Metas -->
-    <title>Christmas - Responsive HTML5 Template</title>
+    <title>Merry Christmas!!!</title>
     <meta name="keywords" content="" />
     <meta name="description" content="" />
     <meta name="author" content="" />
